# ==================================================================
# © Copyright IBM Corp. 2008
#
# THIS FILE IS PROVIDED UNDER THE TERMS OF THE ECLIPSE PUBLIC LICENSE
# ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THIS FILE
# CONSTITUTES RECIPIENTS ACCEPTANCE OF THE AGREEMENT.
#
# You can obtain a current copy of the Eclipse Public License from
# http://www.opensource.org/licenses/eclipse-1.0.php
#
# Author:       Ashoka Rao S <ashoka.rao (at) in.ibm.com>
#               Riyashmon Haneefa <riyashh1 (at) in.ibm.com>
# ==================================================================

################################################################################

SUBDIRS = . \
    Linux_FirewallRegisteredProfile \
    Linux_FirewallElementConformsToProfile \
    Linux_FirewallService \
    Linux_FirewallServiceConfiguration \
    Linux_FirewallServiceConfigurationForService \
    Linux_FirewallInterface \
    Linux_FirewallManagedPorts \
    Linux_FirewallTrustedServices \
    Linux_FirewallTrustedServicesForInterface \
    Linux_FirewallManagedPortsForInterface
